# cheshire

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  jnigen.yaml  pubspec.yaml
.github/ISSUE_TEMPLATE/: feature_request.md  project_issue.yml
.github/workflows/: api.yml  backend.yml  transformer.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle  google-services.json
api/: Dockerfile  Makefile  README.md  api.template.json  aws.template.json  pyproject.toml  requirements.txt
api/cheshire/: logger.py
api/princess_peanutbutter/: __init__.py  logger.py  main.py
api/tests/: test_api.py  test_transform_photos.py  test_transforms.py
app/: .gitignore  Dockerfile  Makefile
app/lib/: main.dart
app/test/: test.dart
app/web/: index.html
backend/: dev-requirements.txt  requirements.txt
backend/cheshire/: app.py  logger.py
backend/tests/: test_api.py  test_transforms.py
docs/: BACKEND.md  GIT.md
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: image_loader.dart  mahjong-engine.dart  main.dart
lib/engine/: highscore_storage.dart
lib/games/: mahjong.dart
lib/utils/: asset.dart  image_loader.dart
lib/widgets/: grid.dart  layered.dart  old_tile.dart  pet_3d_tile.dart  responsive.dart  tile.dart
photo-transformer/: README.md  samconfig.toml  template.yaml
scripts/: convert_tileset.dart
src/mahjong_engine/: CMakeLists.txt  mahjong-engine.c
test/: mahjong_test.dart  test.dart  widget_test.dart
web/: index.html  manifest.json
(+101 files in other folders)
